# Turtlebot

./: lien turtlebot_parfait.md  lien turtlebot_parfait.txt
Led/turtlebot3_led/: CMakeLists.txt  README.md  package.xml
Led/turtlebot3_led/scripts/: rgbled.py
Led/turtlebot3_led/srv/: choisirCouleur.srv
Part_1_Deep_Q_Learning/: checkpoint.pth  dqn_lunarlander.h5
Part_1_Deep_Q_Learning/Part 1 - Deep Q-Learning/: deep_q_learning_for_lunar_landing_complete_code.py
Part_1_Deep_Q_Learning/__MACOSX/Part 1 - Deep Q-Learning/: ._Deep_Q_Learning_for_Lunar_Landing_Complete_Code.ipynb  ._deep_q_learning_for_lunar_landing_complete_code.py
turtlebot3_machine_learning/: ReadMe.txt
turtlebot3_machine_learning/turtlebot3_dqn/: CMakeLists.txt  Readme.md
turtlebot3_machine_learning/turtlebot3_dqn/launch/: turtlebot3_dqn_stage_0.launch
turtlebot3_machine_learning/turtlebot3_dqn/nodes/: result_graph  turtlebot3_dqn_stage_0  turtlebot3_dqn_stage_1  turtlebot3_dqn_stage_2  turtlebot3_dqn_stage_3  turtlebot3_dqn_stage_4
turtlebot3_machine_learning/turtlebot3_dqn/save_model/stage0/: stage_0_10.h5  stage_0_10.json  stage_0_20.h5  stage_0_20.json  stage_0_30.h5  stage_0_40.h5
turtlebot3_machine_learning/turtlebot3_dqn/save_model/stage1/: stage_1_30.json  stage_1_40.h5  stage_1_40.json
turtlebot3_machine_learning/turtlebot3_dqn/save_model/stage2/: stage_2_120.json  stage_2_40.json  stage_2_70.h5  stage_2_70.json
turtlebot3_machine_learning/turtlebot3_dqn/save_model/stage3/: stage_3_120.h5  stage_3_120.json  stage_3_330.json
(+9 files in other folders)
