<?xml version="1.0"?>
<package format="2">
    <name>turtlebot3_led</name>
    <version>0.0.0</version>
    <description>turtlebot3_led</description>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>
</package>
